--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,23 +1,38 @@
 {% extends "blog/base.html" %}
 {% load static %}
 {% block content %}
+
+<article class="media content-section"  style="padding: 2%;">
     {% for post in posts %}
-    <article class="media content-section"  style="padding: 3%;">
-      <div class="row">
-        <div class="col-md-2">
-          <img src="{% static 'images/Capture.PNG' %}" class="" width="50" height="50" alt="">
+
+     <div class="row">
+        <div class col-md-3>
+            {{post.id}}
+            <img src="{% static 'images/' %}{{post.profile}}" width="100" height='100' class=""  alt="">
         </div>
-        <div class="media-body col-md-10">
-          <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-          <p class="article-content">{{ post.content }}</p>
-          <div class="article-metadata">
-          	<img src="{% static post.author.image %}" alt="">
-            <a class="mr-2" href="#">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted | date:"F d, Y" }}</small>
-          </div>
+        <div class="col-md-9">
+            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            {% if post.content|length > 150 %}
+                <p class="article-content">{{ post.content|slice:"0:150" }}...</p>
+                <div>
+                    <li class="btn btn-success">
+                        <a class="text-dark bold" href="{% url 'detail' post.id %}">Detail</a>
+                    </li>
+                </div>
+            {% else %}
+                <p class="article-content">{{ post.content }}</p>
+
+            {% endif %}
+            <div class="article-metadata">
+              	<img src="{% static post.author.image %}" alt="">
+                <a class="mr-2" href="#">{{ post.author }}</a>
+                <small class="text-muted">{{ post.date_posted | date:"F d, Y" }}</small>
+            </div>
+
+
         </div>
       </div>
-        
+
       </article>
     {% endfor %}
 {% endblock content %}
